logs/libase.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/libase'...
Listing './lib/python3.5/site-packages/libase/client'...
Compiling './lib/python3.5/site-packages/libase/client/api_client.py'...
***   File "./lib/python3.5/site-packages/libase/client/api_client.py", line 78
    print api.book.isbn['9787505715660'].get().json()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libase/client/browser.py'...
***   File "./lib/python3.5/site-packages/libase/client/browser.py", line 97
    print request.method, request.url, response.status_code
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libase/multirun'...
Listing './lib/python3.5/site-packages/libase/net'...
Compiling './lib/python3.5/site-packages/libase/net/helper.py'...
***   File "./lib/python3.5/site-packages/libase/net/helper.py", line 33
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libase/platform'...
Listing './lib/python3.5/site-packages/libase/platform/syscall'...
Listing './lib/python3.5/site-packages/libase/runtime'...
Listing './lib/python3.5/site-packages/libase/server'...
Listing './lib/python3.5/site-packages/libase/util'...
Compiling './lib/python3.5/site-packages/libase/util/decorator.py'...
***   File "./lib/python3.5/site-packages/libase/util/decorator.py", line 258
    print '-' * 60
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libase/vendor'...
Listing './lib/python3.5/site-packages/libase/vendor/douban'...
Listing './lib/python3.5/site-packages/libase/vendor/tencent'...
Listing './lib/python3.5/site-packages/libase/vendor/tencent/weixin'...
Listing './lib/python3.5/site-packages/libase-1.0.egg-info'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
